
AntBuilder
----------------------
* Fix validateBuildFileExists() to handle non-absolute, but valid build file with antWorkingDir set to a different work dir on Windows.

Cincom Smalltalk VisualWorks Store Source Control
----------------------
* A sourcecontrol implementation for Cincom Smalltalk VisualWorks Store scm (CC-709). Contributed by Randy Coulman.

CompositeBuilder
----------------------
* Document builder attributes of <composite> builder. Reported by Mark Kefauver and EJ Ciramella.
* Change composite builder to use same technique as Project to detect build errors (in the build log, the "build" tag has an "error" attribute).
* Insert composite builder info into build log for each child builder. 
Todo: Rearranging these elements (even nesting childLog elements?), might allow display of these child buider info elements in reporting apps.

Configuration documentation generation
----------------------
* Created addiitonal plugin superclasses to make generating configxml.html. Still a work in progress (CC-202). Patch by Jerome Lacoste.

Git Source Control & Bootstrapper
----------------------
* Sourcecontrol & Bootstrapper implementation for Git http://git.or.cz/ (CC-710). Submitted by Robert Schiele.

Http Publisher
----------------------
* New publisher to publish to via Http post, get, etc (CC-688). Contributed by Jonathan Gerrish.

Mercurial Source Control & Bootstrapper
----------------------
* Sourcecontrol & Bootstrapper implementation for Mercurial (hg) http://www.selenic.com/mercurial/wiki/ (CC-638). Submitted by Jerome Lacoste.

reporting
======================

* Fix "Building (since)" time on build summary page to show start of build time (instead of last progress message update time). Fix suggested by EJ Ciramella.
* Show progress message as tooltip over Status cells on build summary page.


CruiseControl Release Notes - 2.7.1

general
======================
* Upgraded Ant that is distributed with CruiseControl to Ant version 1.7.0.