@@ -19,6 +19,10 @@ Cincom Smalltalk VisualWorks Store Source Control
 ----------------------
 * A sourcecontrol implementation for Cincom Smalltalk VisualWorks Store scm (CC-709). Contributed by Randy Coulman.
 
+CMSynergy
+----------------------
+* Improved modification query for Telelogic Synergy using "useBindTime" (CC-691). Contributed by Jan Koops.
+
 CompositeBuilder
 ----------------------
 * Document builder attributes of <composite> builder. Reported by Mark Kefauver and EJ Ciramella.
